--- a/index.html
+++ b/index.html
@@ -75,21 +75,21 @@
 				</div>
 				<!-- topic-item -->
 				<div class="col-lg-4 col-sm-6 mb-4">
-					<a href="./plugins/index.html" class="px-4 py-5 bg-white shadow text-center d-block match-height">
+					<a href="" class="px-4 py-5 bg-white shadow text-center d-block match-height">
 						<!-- <i class="ti-panel icon text-primary d-block mb-4"></i> -->
 						<h3 class="mb-3 mt-0">Reservasi</h3>
 						<p class="mb-0">Anda dapat melakukan reservasi terlebih dahulu sebelum melakukan konseling</p>
 					</a>
 				</div>
 				<div class="col-lg-4 col-sm-6 mb-4">
-					<a href="./plugins/index.html" class="px-4 py-5 bg-white shadow text-center d-block match-height">
+					<a href="" class="px-4 py-5 bg-white shadow text-center d-block match-height">
 						
 						<h3 class="mb-3 mt-0">Tes Online</h3>
 						<p class="mb-0">Anda dapat menguji serta mengetahui tingkat kesetresan diri Anda</p>
 					</a>
 				</div>
 				<div class="col-lg-4 col-sm-6 mb-4">
-					<a href="./plugins/index.html" class="px-4 py-5 bg-white shadow text-center d-block match-height">
+					<a href="" class="px-4 py-5 bg-white shadow text-center d-block match-height">
 						
 						<h3 class="mb-3 mt-0">Konselor</h3>
 						<p class="mb-0">Anda dapat melihat dan memilih konselor sesuai dengan keinginan</p>
@@ -100,22 +100,6 @@
 	</section>
 	<!-- /topics -->
 
-	<!-- call to action -->
-	<section>
-		<div class="container">
-			<div class="row">
-				<div class="col-12">
-					<div class="section px-3 bg-white shadow text-center">
-						<h2 class="mb-4">Forum Diskusi</h2>
-						<p class="mb-4">Anda bisa menceritakan kasus anda pada kami!</p>
-						<a href="./plugins/index.html" class="btn btn-primary">contact us</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-	<!-- /call to action -->
-<br><br>
 
 	<!-- ** JS Plugins Needed for the Project ** -->
 	<!-- jquiry -->
